--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^13.1.6",
     "next": "latest",
     "next-plugin-svgr": "^1.1.3",
+    "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6"
