Added jsonbin mock

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_CMS_API="https://raw.githubusercontent.com/hugofabricio/moises/main/"
+NEXT_PUBLIC_CMS_API=https://api.jsonbin.io/v3/b/63e4d9adc0e7653a05732dd4
+CMS_ACCESS_KEY=
